--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="page-header" id="main">
-      <div class="page-header__top">
+      <div id="menu" class="page-header__top">
         <div class="page-header__wrapper">
           <div class="page-header__logo">
             <img src="img/logo.png" width="139" height="46" alt="Хорошо">
@@ -166,5 +166,6 @@
         </div>
       </section>
     </main>
+    <script src="js/script.js"></script>
   </body>
 </html>
